@startuml BloquimDiagramaClasse

class loginController{
    -usuario: String
    -senha : String  

    + irCadastro() : void
    # verificaSenha() : void 
    + completaLogin() : void
}

class cadastroController{
    -usuario: String
    -senha : String  
    -email : String

    + finalizaCadastro() : void
    # voltaTela() : void 
    + fecharAba() : void
}


class anotacaoController{
    + conteudo : String
    - anotacoes : String
    + dataModificacao : String

    + marcacoes() : void
    + adicionaAnotacao() : void
    + verAnotacao(): void
}


class cadernoController{

    +nome
    +dataCriacao
    + disciplina : String
    + capitulos : String 

    + inserirCadernos() : void
    + irCadernoDiario() : void
}

class cadernoDiarioController{

    + humorDoDia : int

    # verificarCondicoesParaInserirCaderno() : boolean 
    + inserirAnotacaoDiario() : void 
    + vaiParaAnotacaoDiario() : void
}

loginController "1" -- "0.."cadernoController:Entra no >
cadernoController  "1.." -- "1.." anotacaoController : < Pertence à 
cadernoDiarioController "1.." -- "1.." anotacaoController : < Pertence à
cadernoController "1" <|- "1.." cadernoDiarioController : < É um tipo
cadastroController "1.." - "1" loginController : < Permite 

@enduml